--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: lsmeans
 Type: Package
 Title: Least-squares means
-Version: 1.00-00
-Date: 2012-10-19
+Version: 1.05-00
+Date: 2012-11-02
 Encoding: latin1
 Author: Russell V. Lenth
 Maintainer: Russ Lenth <russell-lenth@uiowa.edu>
-Suggests: nlme, lme4, pbkrtest, multcomp
-Imports: Matrix
+Suggests: nlme, lme4, pbkrtest
+Enhances: multcomp
+Imports: Matrix, multcomp
 LazyData: yes
 Description: This package provides the function 'lsmeans' for
         outputting so-called least-squares means for factor
@@ -15,6 +16,6 @@ Description: This package provides the function 'lsmeans' for
         compute contrasts or linear combinations of these least-squares
         means, and several standard contrast families are provided.
 License: GPL-2
-Packaged: 2012-10-19 17:46:13 UTC; rlenth
+Packaged: 2012-11-02 13:27:17 UTC; rlenth
 Repository: CRAN
-Date/Publication: 2012-10-19 17:56:11
+Date/Publication: 2012-11-02 13:35:28
