--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: lsmeans
 Type: Package
 Title: Least-squares means
-Version: 1.05-00
-Date: 2012-11-02
+Version: 1.05-01
+Date: 2012-12-05
 Encoding: latin1
 Author: Russell V. Lenth
 Maintainer: Russ Lenth <russell-lenth@uiowa.edu>
-Suggests: nlme, lme4, pbkrtest
+Suggests: nlme, lme4, pbkrtest, multcomp
 Enhances: multcomp
 Imports: Matrix, multcomp
 LazyData: yes
@@ -16,6 +16,6 @@ Description: This package provides the function 'lsmeans' for
         compute contrasts or linear combinations of these least-squares
         means, and several standard contrast families are provided.
 License: GPL-2
-Packaged: 2012-11-02 13:27:17 UTC; rlenth
+Packaged: 2012-12-05 17:54:45 UTC; rlenth
 Repository: CRAN
-Date/Publication: 2012-11-02 13:35:28
+Date/Publication: 2012-12-05 19:26:30
