--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: lsmeans
 Type: Package
 Title: Least-squares means
-Version: 1.06-06
-Date: 2013-06-13
+Version: 1.10-00
+Date: 2013-07-04
 Encoding: latin1
 Author: Russell V. Lenth
 Maintainer: Russ Lenth <russell-lenth@uiowa.edu>
-Suggests: nlme, lme4, pbkrtest, multcomp
+Depends: plyr
+Suggests: nlme, lme4, pbkrtest, multcomp, lattice
 Enhances: multcomp
-Imports: Matrix, multcomp
+Imports: Matrix, multcomp, lattice
 LazyData: yes
 Description: This package provides the function 'lsmeans' for
         outputting so-called least-squares means for factor
@@ -16,7 +17,7 @@ Description: This package provides the function 'lsmeans' for
         compute contrasts or linear combinations of these least-squares
         means, and several standard contrast families are provided.
 License: GPL-2
-Packaged: 2013-06-13 21:46:33 UTC; rlenth
+Packaged: 2013-07-04 19:08:42 UTC; rlenth
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-06-14 07:01:47
+Date/Publication: 2013-07-04 21:48:49
