--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,19 @@
 Package: lsmeans
 Type: Package
 Title: Least-squares means
-Version: 1.10-01
-Date: 2013-07-19
+Version: 1.10-2
+Date: 2013-09-30
 Encoding: latin1
 Author: Russell V. Lenth
 Maintainer: Russ Lenth <russell-lenth@uiowa.edu>
-Depends: plyr
-Suggests: nlme, lme4, pbkrtest, multcomp, lattice
-Enhances: multcomp
-Imports: Matrix, multcomp, lattice
+Depends: plyr, multcomp, R (>= 2.14)
+Suggests: nlme, lme4, pbkrtest, lattice
+Enhances:
+Imports: Matrix
 LazyData: yes
 Description: This package provides the function 'lsmeans' for outputting so-called least-squares means for factor combinations in an 'lm', 'lme', or 'lmer' object. It can also compute contrasts or linear combinations of these least-squares means, and several standard contrast families are provided.
 License: GPL-2
-Packaged: 2013-07-19 15:31:51 UTC; rlenth
+Packaged: 2013-09-30 14:37:10 UTC; rlenth
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-07-19 18:01:06
+Date/Publication: 2013-09-30 17:38:20
